--- a/VulkanSimpleEngine/VulkanSimpleEngine/VulkanSimpleEngine.vcxproj.filters
+++ b/VulkanSimpleEngine/VulkanSimpleEngine/VulkanSimpleEngine.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="vkappbase.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CubeApp.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vkappbase.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CubeApp.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
